--- a/docs/assets/main-stylesheet.css
+++ b/docs/assets/main-stylesheet.css
@@ -10,8 +10,7 @@
     --space3x: 2.25em;
     --space4x: 2.75em;
     --space5x: 3.25em;
-    --heading-font: 'Archivo Narrow', sans-serif;
-    --text-font: 'Archivo', sans-serif;
+    --font: 'Archivo Narrow', sans-serif;
 }
 
 *,
@@ -22,9 +21,8 @@
 }
 
 body {
-    font-family: var(--text-font);
+    font-family: var(--font);
     font-size: 17px;
-    font-weight: 500;
     line-height: 1.6;
     color: var(--primary-dark);
     scroll-behavior: smooth;
@@ -32,20 +30,29 @@ body {
 }
 
 h1 {
-    font-family: var(--heading-font);
+    font-family: var(--font);
     font-size: 5.15em;
-    line-height: 1
+    line-height: 1;
+    font-weight: normal
 }
 
 h2 {
-    font-family: var(--heading-font);
+    font-family: var(--font);
     font-size: 2.55em;
-    line-height: 1
+    line-height: 1;
+    font-weight: normal
 }
 
+a {
+    color: var(--secondary);
+    font-size: 1.3em;
+    text-decoration: none;
+    border-bottom: 1px solid var(--secondary)
+}
 
 .lead {
-    font-size: 1.25em
+    font-size: 1.25em;
+    margin: 0
 }
 
 .grid_mainfold,
@@ -59,7 +66,13 @@ h2 {
 }
 
 .grid_mainfold {
-    background-color: var(--primary-dark)
+background-image: url(background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.grid_secondfold {
+    padding-bottom: var(--space4x)
 }
 
 .grid_mainfold h1,
@@ -101,7 +114,7 @@ h2 {
 @media only screen and (max-width: 640px) {
     .grid_mainfold,
     .grid_secondfold {
-        grid-template-columns: 20px 1fr  1fr 20px
+        grid-template-columns: 20px 1fr 1fr 20px
     }
 
     .fold_3-2 {
@@ -113,7 +126,6 @@ h2 {
     }
 
     h1 {
-        font-family: var(--heading-font);
         font-size: 2.15em;
         line-height: 1
     }
